# hostsbutler

./: .gitattributes  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  update-tap.yml
docs/: agent-guide.md  architecture.md  development.md  file-format.md  plan.md  platform-support.md  user-guide.md
src/: app.rs  event.rs  lib.rs  main.rs  tui.rs
src/backup/: mod.rs  store.rs
src/commands/: backup_cmds.rs  entry_cmds.rs  file_cmds.rs  mod.rs
src/dns/: mod.rs
src/model/: entry.rs  group.rs  hosts_file.rs  line.rs  mod.rs
src/parser/: mod.rs  reader.rs  writer.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/ui/: layout.rs  mod.rs  render.rs  theme.rs
src/ui/components/: backup_view.rs  confirm_dialog.rs  entry_dialog.rs  group_panel.rs  help_overlay.rs  mod.rs  search_bar.rs  status_bar.rs  table_view.rs  toast.rs
src/validation/: mod.rs
tests/: backup_tests.rs  integration_tests.rs  parser_tests.rs  validation_tests.rs
tests/fixtures/: complex.hosts  malformed.hosts  simple.hosts  windows.hosts
