[package]
name = "hostsbutler"
version = "0.1.0"
edition = "2024"
description = "A cross-platform TUI application for managing the system hosts file"
license = "MIT"
repository = "https://github.com/russmckendrick/hostsbutler"
keywords = ["hosts", "tui", "dns", "network", "sysadmin"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Networking
dns-lookup = "2"

# Filesystem & Platform
dirs = "6"
tempfile = "3"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }

# Validation
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Text
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
winapi = { version = "0.3", features = ["shellapi", "winuser"] }

[dev-dependencies]
pretty_assertions = "1"
assert_fs = "1"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
